--- a/about_en.html
+++ b/about_en.html
@@ -15,7 +15,7 @@
             <ul id="navbar">
                 <li id="hoverable"><a href="merch_en.html">Merch</a></li>
                 <li id="hoverable"><a href="games_en.html">Games</a></li>
-                <li id="hoverable"><a href="index_en.html">Home</a></li>
+                <li id="hoverable"><a href="index.html">Home</a></li>
                 <li id="hoverable"><a href="contact_en.html">Contact</a></li>
                 <li id="current">About</li>
             </ul>
