--- a/merch_en.html
+++ b/merch_en.html
@@ -15,7 +15,7 @@
             <ul id="navbar">
                 <li id="current">Merch</li>
                 <li id="hoverable"><a href="games_en.html">Games</a></li>
-                <li id="hoverable"><a href="index_en.html">Home</a></li>
+                <li id="hoverable"><a href="index.html">Home</a></li>
                 <li id="hoverable"><a href="contact_en.html">Contact</a></li>
                 <li id="hoverable"><a href="about_en.html">About</a></li>
             </ul>
